--- a/package.json
+++ b/package.json
@@ -1,12 +1,49 @@
 {
   "name": "react-selectize-js",
-  "version": "0.0.2",
-  "main": "index.js",
+  "version": "0.0.3",
+  "description": "Light weight selectize.js component for react",
+  "main": "dist/index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack"
+  },
+  "keywords": [
+    "react-selectize",
+    "selectize",
+    "selectize.js",
+    "react",
+    "select",
+    "select-input"
+  ],
+  "bugs": {
+    "url": "https://github.com/ziishaned/react-selectize-js/issues"
+  },
+  "homepage": "https://github.com/ziishaned/react-selectize-js#readme",
+  "author": {
+    "name": "Zeeshan Ahmad",
+    "email": "ziishaned@gmail.com",
+    "url": "https://twitter.com/ziishaned"
+  },
   "dependencies": {
     "jquery": "^3.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "selectize": "^0.12.6"
+    "selectize": "^0.12.6",
+    "webpack": "^4.42.1"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@babel/preset-env": "^7.9.5",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
+    "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack-cli": "^3.3.11"
   }
 }
