--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-selectize-js",
   "version": "0.0.3",
   "description": "Light weight selectize.js component for react",
-  "main": "dist/index.js",
+  "main": "build/index.js",
   "license": "MIT",
   "scripts": {
     "build": "webpack"
