--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-selectize-js",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Light weight selectize.js component for react",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --mode development",
